feat: add new project

--- a/index.html
+++ b/index.html
@@ -92,11 +92,35 @@
             </div>
           </div>
           <div class="portfolio__item links">
-            <a class="links__item github" href="https://github.com/heligie" target="_blank"><span class="links__sign">GitHub</span></a>
-            <a class="links__item codepen" href="https://codepen.io/heligie" target="_blank"><span class="links__sign">CodePen</span></a>
-            <a class="links__item habr" href="https://career.habr.com/heligie" target="_blank"><span class="links__sign">Habr</span></a>
-            <a class="links__item linkedin" href="https://linkedin.com/in/heligie" target="_blank"><span class="links__sign">LinkedIn</span></a>
-            <a class="links__item gmail" href="mailto:heligiette@gmail.com" target="_blank"><span class="links__sign">Email</span></a>
+            <div class="links__wrapper">
+              <a class="links__item github" href="https://github.com/heligie" target="_blank"><span class="links__sign">GitHub</span></a>
+              <a class="links__item codepen" href="https://codepen.io/heligie" target="_blank"><span class="links__sign">CodePen</span></a>
+              <a class="links__item habr" href="https://career.habr.com/heligie" target="_blank"><span class="links__sign">Habr</span></a>
+              <a class="links__item linkedin" href="https://linkedin.com/in/heligie" target="_blank"><span class="links__sign">LinkedIn</span></a>
+              <a class="links__item gmail" href="mailto:heligiette@gmail.com" target="_blank"><span class="links__sign">Email</span></a>
+            </div>
+          </div>
+          <div class="portfolio__item project lavender">
+            <div class="project__wrapper">
+              <div class="project__headline">
+                <h3 class="project__title">Audio player</h3>
+                <div class="project__links">
+                  <a class="project__link project__link--code" href="https://github.com/heligie/audio-player" target="_blank" aria-label="GitHub Repo."></a>
+                  <a class="project__link project__link--demo" href="https://heligie.github.io/audio-player" target="_blank" aria-label="Demo."></a>
+                </div>
+              </div>
+              <span class="project__subtitle">Interactive Application</span>
+              <ul class="intro__badges badges">
+                <li class="badges__item badge badge-js">JavaScript</li>
+                <li class="badges__item badge badge-html">HTML</li>
+                <li class="badges__item badge badge-css">CSS</li>
+              </ul>
+              <p class="project__description">Player developed using HTML, CSS and JavaScript. It has the options to play, stop and repeat song, shuffle playlist and mute. Move previous and next songs using navigation controls.</p>
+            </div>
+            <a class="project__demo-link" href="https://heligie.github.io/audio-player" target="_blank">
+              <span class="project__demo-mark">Live Demo</span>
+              <img class="project__img" width="300" height="194" src="./assets/img/preview/player.png" alt="Project preview.">
+            </a>
           </div>
         </section>
       </main>
