--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <img class="intro__img" width="50" height="50" src="./assets/img/avatar.png" alt="Avatar.">
                 <h2 class="intro__title">Hi, I'm Olya.</h2>
               </div>
-              <p>This portfolio website is to present all the applications that I have coded so far. The purpose of these projects are to practice and improve my programming skills.</p>
+              <p>This website contains the applications I have coded and combines my interests of tech and design. The purpose of these projects are to practice and improve my programming skills.</p>
               <ul class="intro__badges badges">
                 <li class="badges__item badge badge-js">JavaScript</li>
                 <li class="badges__item badge badge-ts">TypeScript</li>
