feat: add new badge

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <li class="badges__item badge badge-sass">Sass</li>
                 <li class="badges__item badge badge-api">API</li>
                 <li class="badges__item badge badge-json">JSON</li>
+                <li class="badges__item badge badge-storage">LocalStorage</li>
                 <li class="badges__item badge badge-git">Git</li>
                 <li class="badges__item badge badge-figma">Figma</li>
               </ul>
