feat: add new project

--- a/index.html
+++ b/index.html
@@ -123,6 +123,30 @@
               <img class="project__img" width="300" height="194" src="./assets/img/preview/player.png" alt="Project preview.">
             </a>
           </div>
+          <div class="portfolio__item project husk">
+            <div class="project__wrapper">
+              <div class="project__headline">
+                <h3 class="project__title">Image gallery</h3>
+                <div class="project__links">
+                  <a class="project__link project__link--code" href="https://github.com/heligie/image-gallery" target="_blank" aria-label="GitHub Repo."></a>
+                  <a class="project__link project__link--demo" href="https://heligie.github.io/image-gallery" target="_blank" aria-label="Demo."></a>
+                </div>
+              </div>
+              <span class="project__subtitle">Live Data Application</span>
+              <ul class="intro__badges badges">
+                <li class="badges__item badge badge-js">JavaScript</li>
+                <li class="badges__item badge badge-html">HTML</li>
+                <li class="badges__item badge badge-css">CSS</li>
+                <li class="badges__item badge badge-api">API</li>
+                <li class="badges__item badge badge-json">JSON</li>
+              </ul>
+              <p class="project__description">Image finder application which uses Unsplash API for search by keyword.</p>
+            </div>
+            <a class="project__demo-link" href="https://heligie.github.io/image-gallery" target="_blank">
+              <span class="project__demo-mark">Live Demo</span>
+              <img class="project__img" width="300" height="194" src="./assets/img/preview/image-gallery.png" alt="Project preview.">
+            </a>
+          </div>
         </section>
       </main>
     </div>
