feat: add new project

--- a/index.html
+++ b/index.html
@@ -147,6 +147,28 @@
               <img class="project__img" width="300" height="194" src="./assets/img/preview/image-gallery.png" alt="Project preview.">
             </a>
           </div>
+          <div class="portfolio__item project amour">
+            <div class="project__wrapper">
+              <div class="project__headline">
+                <h3 class="project__title">Tic Tac Toe</h3>
+                <div class="project__links">
+                  <a class="project__link project__link--code" href="https://github.com/heligie/tic-tac-toe" target="_blank" aria-label="GitHub Repo."></a>
+                  <a class="project__link project__link--demo" href="https://heligie.github.io/tic-tac-toe" target="_blank" aria-label="Demo."></a>
+                </div>
+              </div>
+              <span class="project__subtitle">Interactive Application</span>
+              <ul class="intro__badges badges">
+                <li class="badges__item badge badge-js">JavaScript</li>
+                <li class="badges__item badge badge-html">HTML</li>
+                <li class="badges__item badge badge-css">CSS</li>
+              </ul>
+              <p class="project__description">The classic Tic-Tac-Toe game for two players, X and O, who take turns marking the spaces in a 3×3 grid. The player who succeeds in placing three of their marks in a horizontal, vertical, or diagonal row wins the game.</p>
+            </div>
+            <a class="project__demo-link" href="https://heligie.github.io/tic-tac-toe" target="_blank">
+              <span class="project__demo-mark">Live Demo</span>
+              <img class="project__img" width="300" height="194" src="./assets/img/preview/tic-tac-toe.png" alt="Project preview.">
+            </a>
+          </div>
         </section>
       </main>
     </div>
