fix: change subtitle

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                   <a class="project__link project__link--demo" href="https://heligie.github.io/tic-tac-toe" target="_blank" aria-label="Demo."></a>
                 </div>
               </div>
-              <span class="project__subtitle">Interactive Application</span>
+              <span class="project__subtitle">Quick Strategy Game</span>
               <ul class="intro__badges badges">
                 <li class="badges__item badge badge-js">JavaScript</li>
                 <li class="badges__item badge badge-html">HTML</li>
